feat: adapted split, predict and visualize for testing

--- a/check_model.ipynb
+++ b/check_model.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "id": "d20e6a55",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fly_dataset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m confusion_matrix, ConfusionMatrixDisplay\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m v2\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfly_dataset\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FLYDataset\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfly_cnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CNN_Fly\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fly_dataset'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -27,77 +15,88 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.image as mpimg\n",
     "import os\n",
+    "import sys\n",
     "import cv2\n",
     "from tqdm import tqdm\n",
     "from functools import partial\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "from torchvision.transforms import v2\n",
-    "from fly_dataset.py import FLYDataset\n",
+    "\n",
+    "sys.path.append(os.path.join(os.getcwd(), \"uzk_cvproject\"))\n",
+    "from fly_dataset import FLYDataset\n",
     "from fly_cnn import CNN_Fly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "id": "dbeb4c99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize\n",
-    "def visualize_predictions(model, dataset, device=\"cuda\", num_samples=5):\n",
+    "def fly_predict(model, dataset, idx, device=\"cuda\"):\n",
     "    model.eval()\n",
-    "    fig, axes = plt.subplots(1, num_samples, figsize=(15, 4))\n",
-    "    loss_fn = torch.nn.MSELoss()\n",
-    "    losses = []\n",
+    "    img, gt = dataset[idx]\n",
+    "    img = img.to(device)\n",
     "\n",
-    "    for i in range(num_samples):\n",
-    "        img, true_kp = dataset[i]\n",
+    "    with torch.no_grad():\n",
+    "        pred_kp, _, _, _ = model(img)\n",
+    "    print(pred_kp.shape)\n",
     "\n",
-    "        input_img = img.unsqueeze(0).to(device)  # [1, 1, H, W]\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            pred_kp, _, _, _ = model(input_img)\n",
-    "            \n",
-    "        pred_kp = pred_kp.squeeze(0).cpu()\n",
-    "        true_kp = true_kp.cpu()\n",
-    "        # Compute MSE loss on normalized coordinates\n",
-    "        # loss = loss_fn(pred_kp, true_kp).item()\n",
-    "        # losses.append(loss)\n",
-    "\n",
-    "        # Convert normalized to pixel coordinates\n",
-    "        true_kp_px = true_kp.clone()\n",
-    "        true_kp_px[:, 0] *= dataset.H  # x\n",
-    "        true_kp_px[:, 1] *= dataset.W  # y\n",
-    "\n",
-    "        pred_kp_px = pred_kp.clone()\n",
-    "        pred_kp_px[:, 1] *= dataset.W\n",
-    "        pred_kp_px[:, 0] *= dataset.H\n",
-    "\n",
-    "        loss = loss_fn(pred_kp_px, true_kp_px).item()\n",
-    "        losses.append(loss)\n",
-    "\n",
-    "        img_np = img.squeeze(0).numpy()\n",
-    "\n",
-    "        ax = axes[i]\n",
-    "        ax.imshow(img_np, cmap=\"gray\")\n",
-    "        ax.scatter(pred_kp_px[:, 1], pred_kp_px[:, 0], c=\"r\", label=\"Pred\", s=10)\n",
-    "        ax.scatter(true_kp_px[:, 1], true_kp_px[:, 0], c=\"g\", label=\"GT\", s=10, alpha=0.6)\n",
-    "        ax.set_title(f\"Sample {i}\\nMSE: {loss:.4f}\")\n",
-    "        ax.axis(\"off\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "    avg_loss = sum(losses) / len(losses)\n",
-    "    print(f\"\\nAverage MSE over {num_samples} samples: {avg_loss:.4f}\")"
+    "    return img\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1fd38ae",
+   "execution_count": 74,
+   "id": "55333adc",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def fly_visualize(img, annotations, gt = None):\n",
+    "    fig, axes = plt.subplots(1,2)\n",
+    "    ax = axes[0]\n",
+    "    ax.imshow(img, cmap=\"gray\")\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.scatter(annotations[0], annotations[1], c=\"r\", label=\"Pred\", s=10)\n",
+    "    if gt != None:\n",
+    "        ax.scatter(gt[0], gt[1], c=\"g\", label=\"GT\", s=10, alpha=0.6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a1fd38ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used Device: cuda:0\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (64x28800 and 1843200x64)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[75], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m model\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     10\u001b[0m img, anno \u001b[38;5;241m=\u001b[39m test_dataset\u001b[38;5;241m.\u001b[39m__getvisual__(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m img_model \u001b[38;5;241m=\u001b[39m \u001b[43mfly_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m fly_visualize(img, anno)\n",
+      "Cell \u001b[0;32mIn[73], line 8\u001b[0m, in \u001b[0;36mfly_predict\u001b[0;34m(model, dataset, idx, device)\u001b[0m\n\u001b[1;32m      5\u001b[0m img \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m----> 8\u001b[0m     pred_kp, _, _, _ \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(pred_kp\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m img\n",
+      "File \u001b[0;32m~/.conda/envs/project/lib/python3.9/site-packages/torch/nn/modules/module.py:1751\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1749\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1750\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/project/lib/python3.9/site-packages/torch/nn/modules/module.py:1762\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1757\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1758\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1760\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1761\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1762\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1764\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1765\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "File \u001b[0;32m/scratch/cv-course2025/group2/uzk_cvproject/fly_cnn.py:70\u001b[0m, in \u001b[0;36mCNN_Fly.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     68\u001b[0m enc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder(x)\n\u001b[1;32m     69\u001b[0m flat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mflatten(enc)\n\u001b[0;32m---> 70\u001b[0m z_params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[43mflat\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m mu, logvar \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mchunk(z_params, \u001b[38;5;241m2\u001b[39m, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     72\u001b[0m z \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreparametrize(mu, logvar)\n",
+      "File \u001b[0;32m~/.conda/envs/project/lib/python3.9/site-packages/torch/nn/modules/module.py:1751\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1749\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1750\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/project/lib/python3.9/site-packages/torch/nn/modules/module.py:1762\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1757\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1758\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1760\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1761\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1762\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1764\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1765\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "File \u001b[0;32m~/.conda/envs/project/lib/python3.9/site-packages/torch/nn/modules/linear.py:125\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[0;32m--> 125\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbias\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (64x28800 and 1843200x64)"
+     ]
+    }
+   ],
    "source": [
     "model = CNN_Fly(input_size=(480, 960), embedding_size=32)\n",
     "train_dataset = FLYDataset(\"/scratch/cv-course2025/group2/data\")\n",
@@ -108,7 +107,11 @@
     "\n",
     "model.load_state_dict(torch.load(\"./fly-test.pt\"))\n",
     "model.to(device)\n",
-    "visualize_predictions(model, test_dataset, device=device)"
+    "img, anno = test_dataset.__getvisual__(0)\n",
+    "\n",
+    "img_model = fly_predict(model, test_dataset, 0)\n",
+    "\n",
+    "fly_visualize(img, anno)"
    ]
   }
  ],
