chore: some refinements

--- a/fly_book.ipynb
+++ b/fly_book.ipynb
@@ -10,22 +10,17 @@
     "import torch\n",
     "import os\n",
     "import sys\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision.models import ResNet50_Weights\n",
     "from torchvision.transforms.functional import normalize\n",
     "from tqdm import tqdm\n",
-    "from torchvision.transforms import v2\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "sys.path.append(os.path.join(os.getcwd(), \"../uzk_cvproject\"))\n",
-    "from fly_dataset import FLY_Dataset\n",
-    "from fly_resnet import FLY_Resnet  # oder dein Modell\n",
-    "from fly_training_bumblebee import train_keypoint_model  # deine Trainingsfunktion\n",
-    "from fly_visualizer import visualize_fly_batch #visualize_fly, visualize_fly_with_limbs, \n",
-    "#from fly_evaluate import fly_evaluate_and_visualize, fly_eval\n",
     "\n",
-    "# Pfad zum Datensatz\n",
-    "DATA_PATH = \"/scratch/cv-course2025/group2/data\""
+    "sys.path.append(\"/scratch/cv-course2025/group2/uzk_cvproject\")\n",
+    "from fly_dataset import FLY_Dataset\n",
+    "from fly_resnet import FLY_Resnet\n",
+    "from fly_visualizer import visualize_fly_batch\n",
+    "\n",
+    "path_to_data = \"/scratch/cv-course2025/group2/data\""
    ]
   },
   {
@@ -35,13 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dataset laden\n",
-    "train_dataset = FLY_Dataset(DATA_PATH, mode=\"training\", backbone=\"resnet\")\n",
-    "\n",
-    "# Modell initialisieren\n",
+    "train_dataset = FLY_Dataset(path_to_data, mode=\"training\", backbone=\"resnet\")\n",
     "model = FLY_Resnet(num_joints=38)\n",
-    "\n",
-    "# CUDA/CPU auswählen\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
@@ -73,7 +63,7 @@
     "trained_model_2.to(device)\n",
     "print(\"model 2 loaded\")\n",
     "\n",
-    "test_dataset = FLY_Dataset(DATA_PATH, mode=\"test\", backbone=\"resnet\", cam=0)"
+    "test_dataset = FLY_Dataset(path_to_data, mode=\"test\", backbone=\"resnet\", cam=0)"
    ]
   },
   {
