fix: some output corrections

--- a/fly_evaluate_visualize.ipynb
+++ b/fly_evaluate_visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ead6a364",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:09<00:00, 69.36it/s]"
+      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:05<00:00, 71.43it/s]"
      ]
     },
     {
@@ -94,21 +94,11 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(225.07375850952997, 12.131359015279346, 0.47423976608187135)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Trained Model (50 epochs)\n",
-    "fly_evaluate_visualize(m50epoch, test_dataset, device=device, pck_thresh=10)"
+    "mean_mse, mean_rmse, mean_pck = fly_evaluate_visualize(m50epoch, test_dataset, device=device, pck_thresh=10)"
    ]
   },
   {
@@ -131,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:06<00:00, 71.07it/s]"
+      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:05<00:00, 71.55it/s]"
      ]
     },
     {
@@ -148,21 +138,11 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(171.41735955047608, 10.061875324885051, 0.5977543859649123)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Trained Model (10 epochs)\n",
-    "fly_evaluate_visualize(m10epoch, test_dataset, device=device, pck_thresh=10)"
+    "mean_mse, mean_rmse, mean_pck = fly_evaluate_visualize(m10epoch, test_dataset, device=device, pck_thresh=10)"
    ]
   },
   {
@@ -185,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:20<00:00, 64.02it/s]"
+      "Evaluating: 100%|███████████████████████████████████████████████| 9000/9000 [02:16<00:00, 66.13it/s]"
      ]
     },
     {
@@ -202,21 +182,11 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(138.72023166889613, 9.019117918279436, 0.6789298245614035)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Best Trained Model (27 epochs, early stopping)\n",
-    "fly_evaluate_visualize(mBest, test_dataset, device=device, pck_thresh=10)"
+    "mean_mse, mean_rmse, mean_pck = fly_evaluate_visualize(mBest, test_dataset, device=device, pck_thresh=10)"
    ]
   }
  ],
