docs: finalize docs

--- a/fly_evaluate_visualize.ipynb
+++ b/fly_evaluate_visualize.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99966d91",
    "metadata": {},
    "outputs": [
@@ -40,17 +40,17 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "m50epoch = FLY_Resnet()\n",
-    "m50epoch.load_state_dict(torch.load(\"/scratch/cv-course2025/group2/uzk_cvproject/models/cam0_deep-fly-model-resnet50_20250706-051753_50epochs.pt\"))\n",
+    "m50epoch.load_state_dict(torch.load(\"./models/cam0_deep-fly-model-resnet50_20250706-051753_50epochs.pt\"))\n",
     "m50epoch.to(device)\n",
     "print(\"model 50epoch loaded\")\n",
     "\n",
     "m10epoch = FLY_Resnet()\n",
-    "m10epoch.load_state_dict(torch.load(\"/scratch/cv-course2025/group2/uzk_cvproject/models/cam0_deep-fly-model-resnet50_20250707-193305_10epochs.pt\"))\n",
+    "m10epoch.load_state_dict(torch.load(\"./models/cam0_deep-fly-model-resnet50_20250707-193305_10epochs.pt\"))\n",
     "m10epoch.to(device)\n",
     "print(\"model 10epoch loaded\")\n",
     "\n",
     "mBest = FLY_Resnet()\n",
-    "mBest.load_state_dict(torch.load(\"/scratch/cv-course2025/group2/uzk_cvproject/models/cam0_deep-fly-model-resnet50_20250711-020806_27epochs.pt\"))\n",
+    "mBest.load_state_dict(torch.load(\"./models/cam0_deep-fly-model-resnet50_20250711-020806_27epochs.pt\"))\n",
     "mBest.to(device)\n",
     "print(\"Best model loaded\")\n",
     "\n",
